--- a/easy14_isdi/Properties/Resources.resx
+++ b/easy14_isdi/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="keep-calm-its-not-finished-yet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\keep-calm-its-not-finished-yet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mervin14_icon_titled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mervin14_icon_titled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
